# frost-reverb

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: release.yaml
include/signalsmith/: signalsmith-stretch.h
include/signalsmith/signalsmith-linear/: fft.h  stft.h
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
